--- a/object_map/CMakeLists.txt
+++ b/object_map/CMakeLists.txt
@@ -1,10 +1,16 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(object_map)
 
+## Compile as C++11, supported in ROS Kinetic and newer
+# add_compile_options(-std=c++11)
+
 find_package(catkin_simple REQUIRED)
 find_package(OpenCV 4.2 REQUIRED)
 
 include_directories(/usr/local/include/opencv2)
+
+#message(${OpenCV_LIBS})
+#message(${OpenCV_INCLUDE_DIRS})
 
 catkin_simple()
 
